--- a/BuildingEscape/Config/DefaultEngine.ini
+++ b/BuildingEscape/Config/DefaultEngine.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/NewMap.NewMap
 GameDefaultMap=/Game/NewMap.NewMap
+GlobalDefaultGameMode=/Game/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -39,5 +40,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
