Refactoring Physics Handle Code

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@
 BuildingEscape/Content/StarterContent/Textures
 BuildingEscape/Content/StarterContent/HDRI
 
-
-
 ######################
 # VS Generated Files #
 ######################
 *.VC.db
+*.VC.opendb
 *.suo
+*.sln
